--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1024px){
 *{
     margin: 0;
     padding: 0;
@@ -118,4 +119,124 @@ body{
     display: block;
     width: 300px;
     margin: 0 auto;
+}
+}
+@media screen and (max-width: 1023px){
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    body{
+        width: 100%;
+    }
+    .clear{
+        clear: both;
+    }
+    .header{
+        width: 100%;
+        margin: 0px auto;
+    }
+    .text-logo{
+        text-align: center;
+    }
+    .text-logo h1 a{
+        color: #7f0000;
+        text-decoration: none;
+        font-size: 28px;
+    }
+    .social-media{
+        width: 100%;
+        text-align: center;
+    }
+    .social-media ul{
+        list-style: none;
+    }
+    .social-media ul li{
+        display: inline;
+        margin: 0px 5px;
+    }
+    .social-media ul li a{
+        color: #7f0000;
+        text-decoration: none;
+        font-size: 14px;
+    }
+    .neck{
+        background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("./657259.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        margin: 5px auto;
+        padding: 20px 0px;
+        text-align: center;
+    }
+    .neck img{
+        width: 100px;
+    }
+    .neck h1{
+        color: white;
+        margin: 5px 0px;
+        font-size: 28px;
+    }
+    .neck h2{
+        color: white;
+        margin: 5px 0px;
+        font-size: 14px;
+    }
+    .main{
+        width: 100%;
+        margin: 20px auto;
+        border: 1px solid black;
+    }
+    .inner-main{
+        width: 90%;
+        margin: 20px auto;
+    }
+    .inner-main h1{
+        text-align: center;
+        font-weight: normal;
+        font-size: 18px;
+    }
+    .inner-main h2{
+        text-align: center;
+        font-weight: bold;
+        font-size: 18px;
+    }
+    .inner-main h3{
+        text-align: center;
+        margin: 10px 0px;
+        font-weight: bold;
+        font-size: 22px;
+    }
+    .para{
+        font-weight: bold;
+        font-size: 18px;
+    }
+    .inner-main p{
+        font-size: 18px;
+        margin-top: 10px;
+    }
+    .inner-main h4,h5{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 10px;
+    }
+    .inner-main h4{
+        font-size: 18px;
+    }
+    .inner-main h5{
+        font-size: 18px;
+    }
+    .inner-main ul{
+        margin-left: 10px;
+        list-style: none;
+    }
+    .inner-main ul li{
+        font-size: 18px;
+        margin-top: 10px;
+    }
+    .inner-main img{
+        display: block;
+        width: 200px;
+        margin: 0 auto;
+    }
 }
