--- a/lichthidau.css
+++ b/lichthidau.css
@@ -11,6 +11,12 @@
         margin: 0 auto;
         width: 70%;
     }
+    video{
+        display: block;
+        margin: 0px auto;
+        margin-bottom: 50px;
+        width: 80%;
+    }
 }
 @media screen and (max-width: 1023px){
     *{
@@ -21,5 +27,11 @@
         display: block;
         margin: 0 auto;
         width: 100%;
+    }
+    video{
+        display: block;
+        margin: 0px auto;
+        margin-bottom: 20px;
+        width: 80%;
     }
 }
